// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Dive Operators E2E tests when creating a new dive operator will return a 400 response if the request body is invalid 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "name",
      ],
      "received": "number",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received boolean",
      "path": [
        "description",
      ],
      "received": "boolean",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "address",
      ],
      "received": "number",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received boolean",
      "path": [
        "phone",
      ],
      "received": "boolean",
    },
    {
      "code": "invalid_string",
      "message": "Invalid email",
      "path": [
        "email",
      ],
      "validation": "email",
    },
    {
      "code": "invalid_string",
      "message": "Invalid url",
      "path": [
        "website",
      ],
      "validation": "url",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received string",
      "path": [
        "gps",
        "lat",
      ],
      "received": "string",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received string",
      "path": [
        "gps",
        "lon",
      ],
      "received": "string",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "socials",
        "facebook",
      ],
      "received": "number",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "socials",
        "twitter",
      ],
      "received": "number",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received boolean",
      "path": [
        "socials",
        "instagram",
      ],
      "received": "boolean",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received boolean",
      "path": [
        "socials",
        "tiktok",
      ],
      "received": "boolean",
    },
  ],
}
`;

exports[`Dive Operators E2E tests when creating a new dive operator will return a 400 response if the request body is missing 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "name",
      ],
      "received": "undefined",
    },
  ],
}
`;

exports[`Dive Operators E2E tests when retrieving a single dive operator will retrieve the indicated dive operator 1`] = `
{
  "address": "298 Krajcik Springs Apt. 609, Port Dominique, NY, 36743-3620",
  "banner": "https://picsum.photos/seed/G7IWZU/1024/256",
  "createdAt": "2023-09-08T01:43:49.264Z",
  "description": "Arbitro utor acceptus. Comedo comedo arcesso alias eligendi arcesso. Defungo possimus vomica stillicidium.
Sit tendo sumo solvo compono constans. Contabesco cras damno minus. Ultio esse angustus curriculum cupiditas pecto suffoco unus sophismata.",
  "email": "Gaetano_Koepp@yahoo.com",
  "gps": {
    "lat": -89.5995,
    "lon": 162.7726,
  },
  "id": "89c68565-8d5d-4cfa-a374-80e3a6ad0a9c",
  "logo": "https://picsum.photos/seed/SjzU40wm/128/128",
  "name": "shameful, dutiful bower",
  "owner": {
    "avatar": "https://cloudflare-ipfs.com/ipfs/Qmd3W5DuhgHirLHGVixi6V76LhCkZUz6pnFt5AJBiyvHye/avatar/724.jpg",
    "location": "West Covina",
    "logBookSharing": "private",
    "memberSince": "2020-02-24T22:30:50.944Z",
    "name": "Devin Ratke",
    "userId": "5da4efd8-c514-4b3b-802c-133dd25f5f87",
    "username": "Ayla.Rippin",
  },
  "phone": "1-318-605-7083 x884",
  "slug": "shameful-dutiful-bower",
  "socials": {
    "facebook": "Torrance.OKeefe",
    "instagram": "Amari.Sauer91",
    "tiktok": "Retta15",
    "twitter": "Nels.Champlin",
  },
  "updatedAt": "2024-05-23T23:37:28.262Z",
  "verified": false,
  "website": "https://dimpled-format.net",
}
`;

exports[`Dive Operators E2E tests when searching dive operators will perform a basic search with default parameters 1`] = `
{
  "address": "57460 Joy Isle Suite 450, O'Reillybury, MT, 88197-2575",
  "description": "Conitor comedo uxor. Crebro caries angelus apparatus illum voluptate tyrannus bis vociferor. Tardus speculum defaeco tergum arcus combibo argumentum beneficium peccatus.
Vilitas videlicet atque artificiose. Tenuis subnecto asporto uredo. Suscipit acceptus despecto adopto bis vel titulus angustus audio.",
  "email": "Boyd74@yahoo.com",
  "gps": {
    "lat": 9.3258,
    "lon": 11.3944,
  },
  "id": "45e8d829-473b-405a-a870-56ea85f22ae8",
  "logo": "https://picsum.photos/seed/hjunPvssjO/128/128",
  "name": "abandoned, monstrous implication",
  "phone": "(644) 879-2885 x0599",
  "socials": {
    "facebook": "Amya29",
    "instagram": "Marion82",
    "tiktok": "Lizzie.Harvey20",
    "twitter": "Marietta.Jakubowski",
  },
  "verified": false,
  "website": "https://worried-paintwork.org",
}
`;

exports[`Dive Operators E2E tests when searching dive operators will perform a basic search with default parameters 2`] = `
[
  "abandoned, monstrous implication",
  "agreeable, elated platelet",
  "alert, closed legislator",
  "amazing, canine yard",
  "anxious, harsh partnership",
  "any, foolhardy ton",
  "artistic, upright documentation",
  "assured, miniature oatmeal",
  "aware, frequent wish",
  "bare, cultivated kingfish",
  "blue, ecstatic hostess",
  "bossy, shy kick",
  "bouncy, wonderful tag",
  "brave, lopsided broom",
  "bright, acidic spasm",
  "brilliant, forthright trait",
  "buoyant, limited mule",
  "cautious, bony spelling",
  "charming, alive smith",
  "cheery, regal wren",
  "chilly, private well",
  "cluttered, expensive industrialization",
  "colorful, quizzical force",
  "colorless, skeletal pavement",
  "complex, healthy arrival",
  "cool, carefree criticism",
  "crazy, normal bacon",
  "crooked, novel dew",
  "deep, annual fill",
  "delirious, aged basics",
  "dim, zealous orchestra",
  "direct, wise cherry",
  "disgusting, harsh glockenspiel",
  "dismal, leading preservation",
  "distorted, dual day",
  "double, energetic charset",
  "drab, villainous automation",
  "ecstatic, gregarious dimension",
  "elated, burdensome pastor",
  "elliptical, altruistic chairman",
  "embarrassed, spotted pay",
  "empty, annual helium",
  "envious, fluffy burro",
  "euphoric, admired netball",
  "every, caring yacht",
  "exalted, ornery yew",
  "exemplary, ready spawn",
  "failing, wise design",
  "faithful, separate advantage",
  "fake, stylish team",
]
`;

exports[`Dive Operators E2E tests when searching dive operators will perform a more complex search with query parameters 1`] = `
{
  "operators": [
    {
      "address": "9224 Bosco Mountains Suite 837, Simonisville, MA, 40170",
      "description": "Nam adicio pecus. Catena carus sed similique cernuus alter. Conforto congregatio cunctatio.
Conitor audentia inventore advoco. Ago tendo adsum commodi cur defendo autem. Ciminatio thermae aliqua vobis adfero amplexus adficio truculenter.",
      "email": "Selina38@hotmail.com",
      "gps": {
        "lat": -14.7605,
        "lon": 54.6887,
      },
      "id": "55eef599-f798-4e39-8858-2171b97d5add",
      "logo": "https://loremflickr.com/128/128?lock=5483695446163456",
      "name": "well-made, doting wafer",
      "phone": "(369) 500-6519 x8451",
      "socials": {
        "facebook": "Karson62",
        "instagram": "Elias40",
        "tiktok": "Anika.Lang21",
        "twitter": "Cole.Quitzon85",
      },
      "verified": false,
      "website": "https://scientific-belt.org/",
    },
  ],
  "totalCount": 1,
}
`;

exports[`Dive Operators E2E tests when searching dive operators will return a 400 response if the query string is invalid 1`] = `
{
  "issues": [
    {
      "code": "custom",
      "message": "Must be in the format "<lat>,<lon>"",
      "path": [
        "location",
        "location",
      ],
    },
    {
      "code": "custom",
      "message": "Array must contain at least 2 element(s)",
      "path": [
        "location",
        "location",
      ],
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received nan",
      "path": [
        "radius",
      ],
      "received": "nan",
    },
    {
      "code": "too_small",
      "exact": false,
      "inclusive": true,
      "message": "Number must be greater than or equal to 0",
      "minimum": 0,
      "path": [
        "skip",
      ],
      "type": "number",
    },
    {
      "code": "too_big",
      "exact": false,
      "inclusive": true,
      "maximum": 500,
      "message": "Number must be less than or equal to 500",
      "path": [
        "limit",
      ],
      "type": "number",
    },
  ],
}
`;

exports[`Dive Operators E2E tests when transferring ownership of a dive operator will allow an admin to transfer ownership 1`] = `
{
  "address": "298 Krajcik Springs Apt. 609, Port Dominique, NY, 36743-3620",
  "banner": "https://picsum.photos/seed/G7IWZU/1024/256",
  "createdAt": "2023-09-08T01:43:49.264Z",
  "description": "Arbitro utor acceptus. Comedo comedo arcesso alias eligendi arcesso. Defungo possimus vomica stillicidium.
Sit tendo sumo solvo compono constans. Contabesco cras damno minus. Ultio esse angustus curriculum cupiditas pecto suffoco unus sophismata.",
  "email": "Gaetano_Koepp@yahoo.com",
  "gps": {
    "lat": -89.5995,
    "lon": 162.7726,
  },
  "id": "89c68565-8d5d-4cfa-a374-80e3a6ad0a9c",
  "logo": "https://picsum.photos/seed/SjzU40wm/128/128",
  "name": "shameful, dutiful bower",
  "owner": {
    "avatar": "https://example.com/avatar.png",
    "location": "Vancouver, BC",
    "logBookSharing": "public",
    "memberSince": "2024-07-31T13:00:45.000Z",
    "name": "Jane Other",
    "userId": "ca5f6ec9-b9a5-4e9a-8a34-9c27a44d94f8",
    "username": "Jane.Other",
  },
  "phone": "1-318-605-7083 x884",
  "slug": "shameful-dutiful-bower",
  "socials": {
    "facebook": "Torrance.OKeefe",
    "instagram": "Amari.Sauer91",
    "tiktok": "Retta15",
    "twitter": "Nels.Champlin",
  },
  "updatedAt": 1970-01-01T00:00:00.000Z,
  "verified": false,
  "website": "https://dimpled-format.net",
}
`;

exports[`Dive Operators E2E tests when transferring ownership of a dive operator will allow the operator owner to transfer ownership 1`] = `
{
  "address": "298 Krajcik Springs Apt. 609, Port Dominique, NY, 36743-3620",
  "banner": "https://picsum.photos/seed/G7IWZU/1024/256",
  "createdAt": "2023-09-08T01:43:49.264Z",
  "description": "Arbitro utor acceptus. Comedo comedo arcesso alias eligendi arcesso. Defungo possimus vomica stillicidium.
Sit tendo sumo solvo compono constans. Contabesco cras damno minus. Ultio esse angustus curriculum cupiditas pecto suffoco unus sophismata.",
  "email": "Gaetano_Koepp@yahoo.com",
  "gps": {
    "lat": -89.5995,
    "lon": 162.7726,
  },
  "id": "89c68565-8d5d-4cfa-a374-80e3a6ad0a9c",
  "logo": "https://picsum.photos/seed/SjzU40wm/128/128",
  "name": "shameful, dutiful bower",
  "owner": {
    "avatar": "https://example.com/avatar.png",
    "location": "Vancouver, BC",
    "logBookSharing": "public",
    "memberSince": "2024-07-31T13:00:45.000Z",
    "name": "Jane Other",
    "userId": "ca5f6ec9-b9a5-4e9a-8a34-9c27a44d94f8",
    "username": "Jane.Other",
  },
  "phone": "1-318-605-7083 x884",
  "slug": "shameful-dutiful-bower",
  "socials": {
    "facebook": "Torrance.OKeefe",
    "instagram": "Amari.Sauer91",
    "tiktok": "Retta15",
    "twitter": "Nels.Champlin",
  },
  "updatedAt": 1970-01-01T00:00:00.000Z,
  "verified": false,
  "website": "https://dimpled-format.net",
}
`;

exports[`Dive Operators E2E tests when updating a dive operator will return a 400 response if the request body is invalid 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "name",
      ],
      "received": "number",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received boolean",
      "path": [
        "description",
      ],
      "received": "boolean",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "address",
      ],
      "received": "number",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received boolean",
      "path": [
        "phone",
      ],
      "received": "boolean",
    },
    {
      "code": "invalid_string",
      "message": "Invalid email",
      "path": [
        "email",
      ],
      "validation": "email",
    },
    {
      "code": "invalid_string",
      "message": "Invalid url",
      "path": [
        "website",
      ],
      "validation": "url",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received string",
      "path": [
        "gps",
        "lat",
      ],
      "received": "string",
    },
    {
      "code": "invalid_type",
      "expected": "number",
      "message": "Expected number, received string",
      "path": [
        "gps",
        "lon",
      ],
      "received": "string",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "socials",
        "facebook",
      ],
      "received": "number",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received number",
      "path": [
        "socials",
        "twitter",
      ],
      "received": "number",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received boolean",
      "path": [
        "socials",
        "instagram",
      ],
      "received": "boolean",
    },
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Expected string, received boolean",
      "path": [
        "socials",
        "tiktok",
      ],
      "received": "boolean",
    },
  ],
}
`;

exports[`Dive Operators E2E tests when updating a dive operator will return a 400 response if the request body is missing 1`] = `
{
  "issues": [
    {
      "code": "invalid_type",
      "expected": "string",
      "message": "Required",
      "path": [
        "name",
      ],
      "received": "undefined",
    },
  ],
}
`;
